--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "calvad_grid_merge",
+  "name": "calvad_grid_merge_couchdbquery",
   "version": "0.0.1",
-  "description": "Code for merging hpms and detector values",
-  "main": "app.js",
+  "description": "Code extracted from calvad_grid_merge for accessing couchdb data",
+  "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jmarca/calvad_grid_merge"
+    "url": "https://github.com/jmarca/calvad_grid_merge_couchdbquery"
   },
   "author": "James E. Marca",
   "license": "GPL v2",
@@ -16,11 +16,7 @@
     "url": "https://github.com/jmarca/calvad_grid_merge/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "matchdep": "~0.3.0",
-    "jshint": "~2.3.0",
-    "grunt-contrib-jshint": "~0.6.4",
-    "superagent": "~0.15.7"
+    "should": "~2.0.2"
   },
   "dependencies": {
     "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
@@ -30,10 +26,7 @@
     "couch_set_state": "git://github.com/jmarca/couch_set_state.git",
     "couchdb_get_views": "git://github.com/jmarca/couchdb_get_views.git",
     "couchdb_put_doc": "git://github.com/jmarca/couchdb_put_doc.git",
-    "async": "~0.2.9",
-    "optimist": "~0.6.0",
-    "lodash": "~2.2.1",
-    "pg": "~2.8.2",
-    "should": "~2.0.2"
+    "lodash": "",
+    "pg": "~2.8.2"
   }
 }
