--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "url": "https://github.com/jmarca/calvad_grid_merge/issues"
   },
   "devDependencies": {
-    "should": "~2.0.2",
-    "superagent": "^0.21.0"
+      "superagent": "^0.21.0",
+    "should": "*"
   },
   "dependencies": {
     "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
@@ -29,8 +29,6 @@
     "couchdb_get_views": "git://github.com/jmarca/couchdb_get_views.git",
     "couchdb_put_doc": "git://github.com/jmarca/couchdb_put_doc.git",
     "lodash": "",
-    "pg": "~2.8.2",
-    "queue-async": "^1.0.7",
-    "should": "^4.3.0"
+    "queue-async": "^1.0.7"
   }
 }
