don't crash if a grid cell is empty
apparently, it may be possible to have an empty grid cell.  It gets
picked up by postgresql, but for whatever reason, it has no data in
couchdb to dictate the fractions to use (no modeling output).  In that
case, skip it, but don't die.

I haven't written the follow on test downstream yet

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "url": "https://github.com/jmarca/calvad_grid_merge/issues"
   },
   "devDependencies": {
-      "superagent": "^0.21.0",
-    "should": "*"
+    "mocha": "^2.4.5",
+    "should": "*",
+    "superagent": "^0.21.0"
   },
   "dependencies": {
     "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
