hacking and cleaning both
implemented hpms get one hour, all grids

test passes

eslint code in lib

also did some jsdoc stuff

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Code extracted from calvad_grid_merge for accessing couchdb data",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "jsdoc": "jsdoc -c .jsdoc.json",
+    "lint": "eslint lib/*.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,9 @@
     "url": "https://github.com/jmarca/calvad_grid_merge/issues"
   },
   "devDependencies": {
+    "eslint": "^3.5.0",
+    "ink-docstrap": "^1.1.4",
+    "jsdoc": "^3.4.0",
     "mocha": "^2.4.5",
     "should": "*",
     "superagent": "^0.21.0"
@@ -29,7 +34,7 @@
     "couchdb_bulkdoc_saver": "git://github.com/jmarca/couchdb_bulkdoc_saver.git",
     "couchdb_get_views": "git://github.com/jmarca/couchdb_get_views.git",
     "couchdb_put_doc": "git://github.com/jmarca/couchdb_put_doc.git",
-    "lodash": "",
-    "queue-async": "^1.0.7"
+    "d3-queue": "^3.0.3",
+    "lodash": ""
   }
 }
