--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "jsdoc": "jsdoc -c .jsdoc.json",
     "lint": "eslint lib/*.js",
-    "cdbview":"node ./node_modules/couchdb_put_view/put_view.js -c putview.config.json -v ./lib/couchdb_view.json"
+    "cdbview": "node ./node_modules/couchdb_put_view/put_view.js -c putview.config.json -v ./lib/couchdb_view.json"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,11 @@
     "url": "https://github.com/jmarca/calvad_grid_merge/issues"
   },
   "devDependencies": {
-    "eslint": "^3.5.0",
-    "ink-docstrap": "^1.1.4",
-    "jsdoc": "^3.4.0",
-    "mocha": "^2.4.5",
-    "should": "*",
-    "superagent": "^0.21.0"
+    "eslint": "^3.10.2",
+    "ink-docstrap": "^1.3.0",
+    "jsdoc": "^3.4.3",
+    "mocha": "^3.1.2",
+    "should": "*"
   },
   "dependencies": {
     "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
@@ -37,6 +36,7 @@
     "couchdb_put_doc": "git://github.com/jmarca/couchdb_put_doc.git",
     "couchdb_put_view": "github:jmarca/couchdb_put_view",
     "d3-queue": "^3.0.3",
-    "lodash": ""
+    "lodash": "",
+    "superagent": "^3.0.0"
   }
 }
